<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calc">Calculator</string>
    <string name="menu_brows">Browser</string>
    <string name="practice5">Practice 5</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>

    <string name="custom_dialog_add">Add story</string>
    <string name="custom_dialog_multiline">Your text . . .</string>
    <string name="submit">Submit</string>


    <string-array name="signs">
        <item>X</item>
        <item>/</item>
        <item>+</item>
        <item>-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>