<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/calculateFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calc" />
        <item
            android:id="@+id/webViewFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_brows" />
        <item
            android:id="@+id/practice5"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/practice5" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/history" />
    </group>
</menu>