<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.koskin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.koskin.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.koskin.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/calculateFragment"
        android:name="ru.mirea.koskin.mireaproject.CalculateFragment"
        android:label="fragment_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.mirea.koskin.mireaproject.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/practice5"
        android:name="ru.mirea.koskin.mireaproject.Practice5"
        android:label="fragment_practice5"
        tools:layout="@layout/fragment_practice5" />
    <fragment
        android:id="@+id/settings"
        android:name="ru.mirea.koskin.mireaproject.Settings"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/history"
        android:name="ru.mirea.koskin.mireaproject.History"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
</navigation>